[gd_scene load_steps=10 format=3 uid="uid://b0crqylwpgb5l"]

[ext_resource type="FontFile" path="res://addons/localization_editor_plugin_g3/multilang_font.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://bn4dmdsqjekhw" path="res://addons/localization_editor_plugin_g3/icons/language.png" id="2_cexq5"]
[ext_resource type="Script" path="res://addons/localization_editor_plugin_g3/HBxItemTranslation.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://0dlyt1tavfpe" path="res://addons/localization_editor_plugin_g3/icons/exclamation.png" id="3_a1mr7"]
[ext_resource type="Texture2D" uid="uid://d4jl1sewekqpb" path="res://addons/localization_editor_plugin_g3/icons/google-translate.png" id="5_8e8ep"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="ItemTranslation" type="HBoxContainer"]
offset_right = 545.0
offset_bottom = 95.0
theme_override_constants/separation = 10
script = ExtResource("3")

[node name="ButtonCopyKey" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="ButtonCopyKey"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="IconNormal" type="TextureRect" parent="ButtonCopyKey/MarginContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("2_cexq5")
expand_mode = 3
stretch_mode = 5

[node name="IconAlert" type="TextureRect" parent="ButtonCopyKey/MarginContainer"]
visible = false
self_modulate = Color(1, 0.352941, 0.47451, 1)
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("3_a1mr7")
expand_mode = 3
stretch_mode = 5

[node name="VBxString1" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblOriginalTxt" type="LineEdit" parent="VBxString1"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2")
theme_override_styles/normal = SubResource("4")
theme_override_styles/focus = SubResource("3")
theme_override_styles/read_only = SubResource("2")
editable = false

[node name="LblOriginalTxt0" type="Label" parent="VBxString1"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "gdfgdfgdgd"
clip_text = true
max_lines_visible = 1

[node name="LineEditTranslation" type="LineEdit" parent="VBxString1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Text Translated"
placeholder_text = "Write a position..."
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBxString1"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="LblKeyStr" type="Label" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.47451)
layout_mode = 2
size_flags_horizontal = 3
text = "ItemTranslation"
clip_text = true

[node name="BtnTranslate" type="Button" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
focus_mode = 0
text = "Translate"
icon = ExtResource("5_8e8ep")
expand_icon = true

[node name="CheckBoxRevision" type="CheckBox" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Need Revision"

[node name="BtnEdit" type="Button" parent="VBxString1/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Edit"

[node name="VSeparator" type="VSeparator" parent="VBxString1/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("1")

[connection signal="pressed" from="ButtonCopyKey" to="." method="_on_ButtonCopyKey_pressed"]
[connection signal="focus_entered" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_focus_entered"]
[connection signal="focus_exited" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_focus_exited"]
[connection signal="text_changed" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_text_changed"]
[connection signal="text_submitted" from="VBxString1/LineEditTranslation" to="." method="_on_LineEditTranslation_text_entered"]
[connection signal="pressed" from="VBxString1/HBoxContainer/BtnTranslate" to="." method="_on_BtnTranslate_pressed"]
[connection signal="toggled" from="VBxString1/HBoxContainer/CheckBoxRevision" to="." method="_on_CheckBoxRevision_toggled"]
[connection signal="pressed" from="VBxString1/HBoxContainer/BtnEdit" to="." method="_on_BtnEdit_pressed"]
